--- a/style.css
+++ b/style.css
@@ -1,51 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
-body {
-  font-size: 16px;
-}
-
-#index {
-  margin: 0 auto;
-  max-width: 960px;
-}
-main {
-    font-family: "arial";
-}
-
 h1 {
-	text-align: center;
-	font-family: 'Roboto Mono';
+  text-align: center;
+  font-family: 'Roboto Mono';
 }
 
 h2 {
-  	font-family: 'Roboto Mono';
+  font-family: 'Roboto Mono';
 }
 
 #profile {
-  position: relative;
-  bottom: 80px;
-  left: 600px;
-  height: auto;
-  width: 200px;
-  padding: 2em;
+  max-width: 300px;
+  margin: 2em;
 }
 
 header, footer {
-    font-family: "arial";
-  background-color: #CFDCDD;
-  margin: 0 auto;
+  font-family: "Roboto Mono";
+  padding: 1em;
+  background-color: #B23147;
+  text-align: center;
 }
 
-.mod {
-  font-family: "arial";
-  color: #4A0D67;
+a {
+  color: #000;
 }
 
-header {
-  height: 55px;
+main {
+  text-align: left;
+  padding: 2em;
+}
+
+li {
+  list-style: none;
+  font-family: "Arial";
 }
 
 footer {
-  position: relative;
-  top: 100px;
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
 }
