--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h2 {
 header, footer {
   font-family: "Roboto Mono";
   padding: 1em;
-  background-color: #B23147;
+  background-color: #D78492;
   text-align: center;
 }
 
