--- a/style.css
+++ b/style.css
@@ -1,42 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 h1 {
-  text-align: center;
+  align-self: center;
   font-family: 'Roboto Mono';
+  margin-left: auto;
+  margin-right: auto;
 }
 
-h2 {
-  font-family: 'Roboto Mono';
+header {
+  background-color: #C6EBF2;
+  display: flex;
+  justify-content: space-between;
 }
 
-#profile {
-  max-width: 300px;
-  margin: 2em;
+main {
+  display: grid;
+  grid-template-rows: repeat(7, 1fr);
 }
 
-header, footer {
-  font-family: "Roboto Mono";
-  padding: 1em;
-  background-color: #D78492;
-  text-align: center;
+li {
+  list-style-type: none;
 }
 
 a {
   color: #000;
 }
 
-main {
-  text-align: left;
-  padding: 2em;
+a:hover {
+  background-color: #C6EBF2;
 }
 
-li {
-  list-style: none;
-  font-family: "Arial";
+img {
+  max-width: 20%;
+  height: auto;
+  padding: auto;
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
-  width: 100vw;
+  background-color: #C6EBF2;
+  margin-top: auto;
+  margin-bottom: 0;
+  text-align: center;
 }
