--- a/lesson03/style/mobile.css
+++ b/lesson03/style/mobile.css
@@ -2,7 +2,7 @@
 
 h1, h2, h3, h4, h5, h6, a, ul {
 	font-family: 'Itim', cursive;
-	color: #ef2d56;
+	color: #B62443;
 	background-color: #edc639;
 	padding: 1em;
 	text-align: center;
