--- a/lesson03/style/mobile.css
+++ b/lesson03/style/mobile.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 
-h1, h2, h3, h4, h5, h6, a, ul {
+h1, h2, h3, h4, h5, h6, a, ul, ol {
 	font-family: 'Itim', cursive;
 	color: #B62443;
 	background-color: #edc639;
