--- a/lesson05/css/small.css
+++ b/lesson05/css/small.css
@@ -77,7 +77,8 @@ button {
 #logo {
 		height: 100px;
 		width: auto;
-		margin: auto;
+		margin-top: auto;
+		margin-bottom: auto;
 }
 
 span {
@@ -94,4 +95,6 @@ footer {
 	background-color: var(--khaki);
 	padding: 1em;
 	text-align: center;
+	position: relative;
+	top: 300px;
 }
