--- a/week2/styles/small.css
+++ b/week2/styles/small.css
@@ -8,8 +8,14 @@ img {
     font-family: 'Ubuntu', sans-serif;
 }
 
-h1, h2, p, img {
-    padding: 1.5rem;
+h2 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+p {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 a {
@@ -18,6 +24,7 @@ a {
 
 img {
     width: 85%;
+    padding-top: 2rem;
 }
 
 div {
