--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,3 +1,73 @@
 @media only screen and (min-width: 992px) {
 
+main {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+#headerBtns {
+    display: initial;
+}
+
+    .navigation li:first-child {
+        display: none;
+    }
+
+    .navigation li {
+        display: inline;
+    }
+
+    .navigation {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    #hero {
+        height: 100%;
+        grid-row: 1/3;
+        grid-column:2/4;
+    }
+
+    #event {
+        grid-row: 1/2;
+        grid-column: 1/2;
+    }
+
+    #weather {
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+
+
+
+#spotlight1 {
+    grid-row: 1/2;
+}
+
+#spotlight2 {
+    grid-row:2/3;
+    grid-column:4/5;
+}
+
+    #spotlight1, #spotlight2, #spotlight3 {
+        grid-column: 4/5;
+    }
+
+    #join {
+        grid-row:3/4;
+        grid-column: 1/2;
+    }
+
+    #newsRelease {
+        grid-column: 2/4;
+        grid-row: 3/4;
+    }
+
+    #spotlight3 {
+        display: block;
+        grid-row: 3/4;
+        grid-column: 4/5;
+    }
+
 }
