--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -2,5 +2,44 @@
     main {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, 1fr);
     }
+
+    #hero {
+        grid-column: 1/3;
+    }
+
+    #newsRelease {
+        grid-row: 2/3;
+        grid-column: 1/3;
+    }
+
+    #spotlight1 {
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    #spotlight2 {
+        grid-column: 2/3;
+        grid-row: 3/4;
+    }
+
+    #join {
+        display: block;
+        grid-column: 1/3;
+        grid-row: 4/5;
+    }
+
+    #spotlight3 {
+        display: none;
+    }
+
+    #event {
+        grid-row: 5/6;
+    }
+
+    #weather {
+        grid-row: 5/6;
+    }
+
 }
