--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -13,7 +13,7 @@ h6,
 #headerWrapper {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 header img {
@@ -21,8 +21,7 @@ header img {
     height: 100%;
 }
 
-/* blah */
-img {
+footer img {
     width: 70px;
 }
 
@@ -50,7 +49,8 @@ header h1 {
 }
 
 nav ul {
-    padding-left: 0px;
+    padding: 0px;
+    margin: 0;
 }
 
 #hamburger {
@@ -64,13 +64,6 @@ nav ul {
     color: #000;
 }
 
-#headerBtns {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-grow: 1;
-}
-
 footer {
     background-color: #000;
     color: #dbc1ab;
@@ -78,12 +71,20 @@ footer {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin-top: 2rem;
+}
+
+footer div {
+    padding-top: 1rem;
+    padding-bottom:1rem;
 }
 
 #footerBottom {
     background-color: #dbc1ab;
     color: #000;
     width: 100%;
+    padding-bottom: .5rem;
+    padding-top: .5rem;
 }
 
 #spotlight3 {
@@ -97,3 +98,68 @@ display: none;
 footer a {
     color: #fff;
 }
+
+.responsive {
+    color: #000;
+}
+
+nav li {
+    padding: .25rem;
+    width: 100%;
+}
+
+nav a {
+    color:#000;
+    display: block;
+    width: 100%;
+}
+
+#currentDate {
+    padding: 1rem;
+}
+
+button {
+    padding: .5rem;
+}
+
+.mainSection img {
+    width: 60px;
+}
+
+.mainSection {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+#hero {
+    background-image: url("../images/hero-image.jpg");
+    background-color: #fff;
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#heroWrapper {
+    background-color: #dbc1ab;
+    margin: .75rem;
+    padding: 1rem;
+}
+
+#headerBottom {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+button {
+    background-color: #000;
+}
+
+button a {
+    color: #dbc1ab;
+}
+
