--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -4,7 +4,7 @@ main {
     display: grid;
     grid-row-gap: 30px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, px);
+    grid-template-rows: repeat(3, 250px);
 }
 
 .mainSection {
