--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -4,7 +4,7 @@ main {
     display: grid;
     grid-row-gap: 30px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 250px);
+    grid-template-rows: repeat(3, 300px);
 }
 
 .mainSection {
@@ -44,7 +44,10 @@ main {
         grid-column: 1/2;
     }
 
-
+#spotlights {
+    grid-column: 4/5;
+    grid-row: 1/4;
+}
 
 #spotlight1 {
     grid-row: 1/2;
@@ -87,4 +90,26 @@ main {
     .navigation {
         justify-content: space-around;
     }
+
+/**********************/
+
+
+
+/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    #heroWrapper {
+        grid-column: 2/4;
+        grid-row: 1/3;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    */
+#small-image, #medium-image {
+    display: none;
+}
+
+#large-image {
+display: initial;
+}
+
 }
