--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,6 +1,7 @@
 @media only screen and (min-width: 720px) {
     main {
         display: grid;
+        grid-row-gap: 35px;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(5, 1fr);
     }
@@ -41,5 +42,20 @@
     #weather {
         grid-row: 5/6;
     }
+
+/*!!!!!!!!!!!!!!!!!!!!!
+
+#heroWrapper {
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+*/
+#small-image, #large-image {
+    display: none;
+}
+
+#medium-image {
+    display: inline;
+}
 
 }
