--- a/chamber/styles/large-form.css
+++ b/chamber/styles/large-form.css
@@ -110,7 +110,9 @@
     }
 
     main {
-        margin-left: 1rem;
+        max-width: 960px;
+        margin-left: auto;
+        margin-right: auto;
     }
     
 }
