--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,10 +1,13 @@
 @media only screen and (min-width: 992px) {
 
 main {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
     display: grid;
     grid-row-gap: 30px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 300px);
+    grid-template-rows: auto;
 }
 
 .mainSection {
@@ -25,7 +28,6 @@ main {
 
     .navigation {
         display: flex;
-        justify-content: space-evenly;
     }
 
     #hero {
