--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -3,7 +3,7 @@
         display: grid;
         grid-row-gap: 35px;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-rows: auto;
     }
 
     #hero {
@@ -56,6 +56,10 @@
 
 #medium-image {
     display: inline;
+}
+
+.galleryCtn {
+    padding: 1em;
 }
 
 }
