--- a/chamber/styles/large-form.css
+++ b/chamber/styles/large-form.css
@@ -14,11 +14,17 @@
 
     .navigation li {
         display: inline;
+        margin-left:5em;
+        margin-right: 5em;
     }
 
     .navigation {
         display: flex;
-        justify-content: space-evenly;
+    }
+
+    nav a {
+        text-align: center;
+        padding: .5em;
     }
 
     #hero {
