--- a/chamber/styles/medium-form.css
+++ b/chamber/styles/medium-form.css
@@ -1,56 +1,5 @@
 @media only screen and (min-width: 720px) {
 
-    #hero {
-        grid-column: 1/3;
-    }
-
-    #newsRelease {
-        grid-row: 2/3;
-        grid-column: 1/3;
-    }
-
-    #spotlight1 {
-        grid-column: 1/2;
-        grid-row: 3/4;
-    }
-
-    #spotlight2 {
-        grid-column: 2/3;
-        grid-row: 3/4;
-    }
-
-    #join {
-        display: block;
-        grid-column: 1/3;
-        grid-row: 4/5;
-    }
-
-    #spotlight3 {
-        display: none;
-    }
-
-    #event {
-        grid-row: 5/6;
-    }
-
-    #weather {
-        grid-row: 5/6;
-    }
-
-/*!!!!!!!!!!!!!!!!!!!!!
-
-#heroWrapper {
-    grid-column: 1/3;
-    grid-row: 1/2;
-}
-*/
-#small-image, #large-image {
-    display: none;
-}
-
-#medium-image {
-    display: inline;
-}
 
 main {
     display: grid;
@@ -70,6 +19,18 @@ main {
 .levels {
     background-color: #dbc1ab;
     padding: 1rem;
+}
+
+h2 {
+    grid-column: 1/3;
+    text-align: center;
+}
+
+ form {
+    grid-column: 1/3;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 }
