--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -135,9 +135,9 @@ button {
 }
 
 #hero {
-    /*!!!!!!!!!!!!!!!!!!!!
+    
     background-image: url("../images/hero-image.jpg");
-    */
+    
     background-color: #fff;
     height: 600px;
     background-position: center;
@@ -221,6 +221,8 @@ button {
     display: flex;
     flex-direction: column;
     margin: 1rem;
+    background-color: #dbc1ab;
+    padding: .5em;
 }
 
 #business, #membership {
@@ -231,6 +233,16 @@ button {
     display: none;
 }
 
-label, input {
+label, input, .galleryCtn {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.levels {
+    display: none;
+}
+
+.galleryCtn {
+    background-color: #dbc1ab;
+    padding: .5em;
+    margin: 1em;
 }
