--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -35,7 +35,7 @@ main {
 
 article,
 section {
-	margin: 0.75rem;
+	margin: .25rem;
 }
 
 section {
@@ -72,15 +72,20 @@ section {
 .list section {
 	flex-direction: row;
 	justify-content: left;
+	margin: .2;
 }
 
 .list section > * {
-	margin: 0 1rem;
+	margin: 0 .5rem;
 	text-align: left;
 }
 
 .list section img {
 	display: none;
+}
+
+.list h6 {
+	margin:0;
 }
 
 section h3 {
@@ -96,4 +101,86 @@ img {
 	.list section img {
 		display: block;
 	}
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.primaryFont {
+    font-family: 'Red Hat Mono', monospace;
+}
+
+#headerWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#headerBottom {
+	margin-top: 2em;
+	display: flex;
+	justify-content: space-around;
+}
+
+.navigation li {
+    display: none;
+}
+
+.navigation li:first-child {
+    display: block;
+}
+
+.responsive li {
+    display: block;
+	padding: .5em;
+}
+
+nav ul {
+    padding: 0px;
+    margin: 0;
+}
+
+#hamburger {
+    width: 30px;
+    height: 30px;
+}
+
+.socials {
+    width: 25px;
+    height: 25px;
+    color: #000;
+}
+
+header a {
+	color: #000;
+}
+
+footer {
+    background-color: #000;
+    color: #dbc1ab;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+footer div {
+    padding-top: 1rem;
+    padding-bottom:1rem;
+}
+
+#footerBottom {
+    background-color: #dbc1ab;
+    color: #000;
+    width: 100%;
+    padding-bottom: .5rem;
+    padding-top: .5rem;
+}
+
+footer a {
+	color: #fff;
 }
