--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -246,3 +246,25 @@ label, input, .galleryCtn {
     padding: .5em;
     margin: 1em;
 }
+
+#contact {
+    background-color: #dbc1ab;
+    padding: 1em;
+}
+
+.leaderCtn {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #000;
+    color: #fff;
+    padding: .75em;
+    margin: 1em;
+}
+
+.boardLeader {
+    margin: .5em;
+    color: #dbc1ab;
+}
+
+#cta {
+    text-align: center;
+}
