--- a/chamber/styles/large-form.css
+++ b/chamber/styles/large-form.css
@@ -14,7 +14,7 @@
 
     .navigation li {
         display: inline;
-        margin-left:5em;
+        margin-left: 5em;
         margin-right: 5em;
     }
 
@@ -120,5 +120,10 @@
         margin-left: auto;
         margin-right: auto;
     }
-    
+
+    #contact,
+    #cta {
+        grid-column: 1/3;
+    }
+
 }
