--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -43,13 +43,6 @@
         grid-row: 5/6;
     }
 
-/*!!!!!!!!!!!!!!!!!!!!!
-
-#heroWrapper {
-    grid-column: 1/3;
-    grid-row: 1/2;
-}
-*/
 #small-image, #large-image {
     display: none;
 }
@@ -64,6 +57,24 @@
 
 footer {
     margin-top: 2em;
+}
+
+hr, .menu, .grid, .list {
+    grid-column: 1/3;
+}
+
+.grid .cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.list {
+	font-size: larger;
+}
+
+.cards section {
+    justify-content: space-around;
+    padding: 1.5em;
 }
 
 }
