--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -280,3 +280,8 @@ figure {
 #meetAndGreet {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.galleryCtn h4 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
