--- a/bountifulFoods/styles/small.css
+++ b/bountifulFoods/styles/small.css
@@ -1,10 +1,41 @@
-/* HEADER STYLES */
-header {
-    background-color: #D2E067;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Quicksand&display=swap');
+
+h1, h2, h3, h4, h5, h6, a {
+    font-family: 'Comfortaa', cursive;
 }
 
+div, p, span, section, select, #submitBtn {
+    font-family: 'Quicksand', sans-serif;
+}
+
+/* HEADER STYLES */
 #headerCtn {
     display: flex;
+    padding: 1rem;
+    text-align: center;
+    align-items: center;
+    margin: 0;
+}
+
+nav ul li {
+    padding: .5rem;
+}
+
+nav a {
+    color: #000;
+}
+
+#socials {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#socials img {
+    width: 30px;
+}
+
+.navigation {
+    padding-left: 0;
 }
 
 .navigation li {
@@ -21,7 +52,7 @@ header {
 
 
 /*******************/
-img {
+header img {
     max-width: 50px;
     max-height: 50px;
 }
@@ -38,13 +69,91 @@ div {
     margin-bottom: 1em;
 }
 
+/****************/
+.logo {
+    max-width: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+/* MAIN STYLES */
+main {
+    text-align: center;;
+}
 
+main p {
+    text-align: left;
+}
 
+form {
+    text-align: center;
+}
+
+form div {
+    padding: .5rem;
+}
+
+.section {
+    padding: 1rem;
+}
+
+main .section {
+    background-color: #000;
+    color: #fff;
+}
+
+main img {
+    max-width: 100%;
+}
+
+#cta {
+    background-image: url(../images/fruit.jpg);
+    height: 200px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#cta a {
+    background-color: #000;
+    color: #D2E067;
+    padding: 1rem;
+}
+
+.contact-info {
+    background-color: #D2E067;
+    color: #000;
+    padding: .75em;
+}
+
+.contact-info h3 {
+    margin: 0;
+}
+
+#small-map {
+    display: flex;
+    justify-content: center;
+}
+
+#medium-map {
+    display: none;
+}
 
 
 /* FOOTER STYLES */
 footer {
     background-color: #000;
     color: #D2E067;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+footer div {
+    margin: 0;
 }
