--- a/bountifulFoods/styles/medium.css
+++ b/bountifulFoods/styles/medium.css
@@ -1,9 +1,70 @@
 @media only screen and (min-width:720px) {
+
+    main {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+    }
+
+    form,
+    #contact-info,
+    #ctaCtn,
+    #map {
+        grid-column: 1/3;
+    }
+
+    #map {
+        display: flex;
+        justify-content: center;
+    }
+
+    .section {
+        margin: .5rem;
+    }
+
+    #company {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .logo {
+        max-width: 250px;
+    }
+
+    #weather {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+
+
     #small-map {
         display: none;
     }
+
     #medium-map {
         display: flex;
         justify-content: center;
     }
+
+    .text,
+    textarea,
+    select {
+        width: 400px;
+    }
+
+    body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
+    footer {
+        margin-top: auto;
+    }
+
 }
